# wasmtime

./: COMPLETE_IMPLEMENTATION.md  Cargo.toml  FEATURE_SUMMARY.md  INTEGRATION_GUIDE.md  ORCHESTRATION_INTEGRATION.md
crates/c-api/tests/: CMakeLists.txt  global_code.c
crates/wasmtime/src/runtime/component/: store.rs
crates/wasmtime/src/runtime/module/: registry.rs
examples/host-bundles/: README.md  hosts.toml
examples/host-bundles/example_host/: host.toml
examples/host-bundles/example_host/lib/: README.md
examples/host-bundles/example_host/wit/example-interface/: world.wit
examples/host-bundles/reference-adapter/: Cargo.toml  README.md
examples/host-bundles/reference-adapter/examples/: standalone-runner.rs
examples/host-bundles/reference-adapter/examples/test-component/: Cargo.toml
examples/host-bundles/reference-adapter/examples/test-component/src/: lib.rs
examples/host-bundles/reference-adapter/examples/test-component/wit/: world.wit
examples/host-bundles/reference-adapter/src/: lib.rs
examples/host-bundles/reference-adapter/wit/: keyvalue.wit
src/: host_adapter.rs  host_bundle.rs  lib.rs
src/commands/: run.rs  wizer.rs
tests/: global_code_registry_crash.rs
