[package]
name = "keyvalue-host-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "27.0", features = ["component-model"] }
wit-bindgen = "0.38"
anyhow = "1"
parking_lot = "0.12"
lazy_static = "1.4"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "standalone-runner"
path = "examples/standalone-runner.rs"

[dev-dependencies]
wasmtime-wasi = "27.0"
